--- a/views/edit.tt
+++ b/views/edit.tt
@@ -14,20 +14,22 @@
         New record
     [% END %]
 </h2>
-<p></p>
-<div class="btn-group">
-    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Action <b class="caret"></b></button>
-    <ul class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="edit_action">
-        <li role="presentation"><a role="menuitem" href="/edit/?from=[% record.current_id %]">Copy record</a></li>
-        [% IF user.permission.create_child AND NOT record.parent_id %]
-            <li role="presentation"><a role="menuitem" href="/edit/?child=[% record.current_id %]">Create child record</a></li>
-        [% END %]
-        [% IF user.permission.link %]
-            <li role="presentation"><a role="menuitem" href="/link/[% record.current_id %]">Link record</a></li>
-        [% END %]
-        <li role="presentation"><a role="menuitem" href="/record/[% record.current_id %]">View record</a></li>
-    </ul>
-</div>
+[% IF record.current_id %]
+    <p></p>
+    <div class="btn-group">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Action <b class="caret"></b></button>
+        <ul class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="edit_action">
+            <li role="presentation"><a role="menuitem" href="/edit/?from=[% record.current_id %]">Copy record</a></li>
+            [% IF user.permission.create_child AND NOT record.parent_id %]
+                <li role="presentation"><a role="menuitem" href="/edit/?child=[% record.current_id %]">Create child record</a></li>
+            [% END %]
+            [% IF user.permission.link %]
+                <li role="presentation"><a role="menuitem" href="/link/[% record.current_id %]">Link record</a></li>
+            [% END %]
+            <li role="presentation"><a role="menuitem" href="/record/[% record.current_id %]">View record</a></li>
+        </ul>
+    </div>
+[% END %]
 <p></p>
 <form role="form" method="post" enctype="multipart/form-data">
     <div class="row">
