--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -2,15 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <!-- What a mess. The login screen only renders with IE8 mode, the graphs only with IE7 mode
-             Please Microsoft, don't produce such rubbish. Just ditch IE forever and use an open source browser instead -->
-        <!-- Okay, since the above, rendering the graphs seems to work in some versions of IE8 with IE8
-            compatibility. Let's leave it at 8 and see how it goes -->
-        [% IF page == "data" AND viewtype == "graph" %]
-            <meta http-equiv="X-UA-Compatible" content="IE=8">
-        [% ELSE %]
-            <meta http-equiv="X-UA-Compatible" content="IE=8">
-        [% END %]
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
