--- a/views/layout.tt
+++ b/views/layout.tt
@@ -546,74 +546,121 @@
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
-        <div class="modal fade" id="modal_access_control" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <form role="form" method="post" enctype="multipart/form-data">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="modal_access-control">Access Control</h4>
-                    </div>
-                    <div class="modal-body">
-                        [% IF groups.all.size %]
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>Group</th>
-                                        <th>Read</th>
-                                        <th>Write values to new records</th>
-                                        <th>Edit existing values</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    [% IF column.permissions.keys.size %]
-                                        [% all_perms = column.permissions.keys %]
-                                    [% ELSE %]
-                                        [% all_perms = [ 0 ] %]
-                                    [% END %]
-                                    [% FOREACH perm IN all_perms %]
-                                        <tr class="permission_row">
-                                            <td>
-                                                <select class="form-control" name="group_id">
-                                                    <option></option>
-                                                    [% FOR group IN groups.all %]
-                                                        <option value="[% group.id %]" [% IF group.id == perm %]selected[% END %]>[% group.name %]</option>
-                                                    [% END %]
-                                                </select>
-                                            </td>
-                                            <td>
-                                                <input type="hidden" name="read" value="holder">
-                                                <input type="checkbox" name="read" [% IF column.group_has(perm, 'read') %]checked[% END %]>
-                                            </td>
-                                            <td>
-                                                <input type="hidden" name="write_new" value="holder">
-                                                <input type="checkbox" name="write_new" [% IF column.group_has(perm, 'write_new') %]checked[% END %]>
-                                            </td>
-                                            <td>
-                                                <input type="hidden" name="write_existing" value="holder">
-                                                <input type="checkbox" name="write_existing" [% IF column.group_has(perm, 'write_existing') %]checked[% END %]>
-                                            </td>
-                                            <td>
-                                                <a class="btn btn-primary btn-sm cloneme"><i class="fa fa-lg fa-plus" style="cursor: pointer"></i></a>
-                                                <a class="btn btn-primary btn-sm removeme"><i class="fa fa-lg fa-minus" style="cursor: pointer"></i></a>
-                                            </td>
-                                        </tr>
-                                    [% END %]
-                                </tbody>
-                            </table>
+        [% WRAPPER modal_dialog.tt
+            modal_id="modal_access_control" modal_action_text="Save" modal_heading="Access Control"
+            modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
+        %]
+            [% IF groups.all.size %]
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Group</th>
+                            <th>Read</th>
+                            <th>Write values to new records</th>
+                            <th>Edit existing values</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        [% IF column.permissions.keys.size %]
+                            [% all_perms = column.permissions.keys %]
                         [% ELSE %]
-                            <p>No groups have been created yet. <a href="/group">Click here</a> to create a group.</p>
+                            [% all_perms = [ 0 ] %]
                         [% END %]
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="submit" name="access_control" value="submit" class="btn btn-primary">Save</button>
-                    </div>
-                    </form>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
+                        [% FOREACH perm IN all_perms %]
+                            <tr class="permission_row">
+                                <td>
+                                    <select class="form-control" name="group_id">
+                                        <option></option>
+                                        [% FOR group IN groups.all %]
+                                            <option value="[% group.id %]" [% IF group.id == perm %]selected[% END %]>[% group.name %]</option>
+                                        [% END %]
+                                    </select>
+                                </td>
+                                <td>
+                                    <input type="hidden" name="read" value="holder">
+                                    <input type="checkbox" name="read" [% IF column.group_has(perm, 'read') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <input type="hidden" name="write_new" value="holder">
+                                    <input type="checkbox" name="write_new" [% IF column.group_has(perm, 'write_new') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <input type="hidden" name="write_existing" value="holder">
+                                    <input type="checkbox" name="write_existing" [% IF column.group_has(perm, 'write_existing') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary btn-sm cloneme"><i class="fa fa-lg fa-plus" style="cursor: pointer"></i></a>
+                                    <a class="btn btn-primary btn-sm removeme"><i class="fa fa-lg fa-minus" style="cursor: pointer"></i></a>
+                                </td>
+                            </tr>
+                        [% END %]
+                    </tbody>
+                </table>
+            [% ELSE %]
+                <p>No groups have been created yet. <a href="/group">Click here</a> to create a group.</p>
+            [% END %]
+        [% END %]
+        [% WRAPPER modal_dialog.tt
+            modal_id="modal_approval_control" modal_action_text="Save" modal_heading="Approval Control"
+            modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
+        %]
+            [% IF groups.all.size %]
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Group</th>
+                            <th>Write new without approval</th>
+                            <th>Edit existing without approval</th>
+                            <th>Approve new values</th>
+                            <th>Approve edits</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        [% IF column.permissions.keys.size %]
+                            [% all_perms = column.permissions.keys %]
+                        [% ELSE %]
+                            [% all_perms = [ 0 ] %]
+                        [% END %]
+                        [% FOREACH perm IN all_perms %]
+                            <tr class="permission_row">
+                                <td>
+                                    <select class="form-control" name="group_id">
+                                        <option></option>
+                                        [% FOR group IN groups.all %]
+                                            <option value="[% group.id %]" [% IF group.id == perm %]selected[% END %]>[% group.name %]</option>
+                                        [% END %]
+                                    </select>
+                                </td>
+                                <td>
+                                    <input type="hidden" name="write_new_no_approval" value="holder">
+                                    <input type="checkbox" name="write_new_no_approval" [% IF column.group_has(perm, 'write_new_no_approval') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <input type="hidden" name="write_existing_no_approval" value="holder">
+                                    <input type="checkbox" name="write_existing_no_approval" [% IF column.group_has(perm, 'write_existing_no_approval') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <input type="hidden" name="approve_new" value="holder">
+                                    <input type="checkbox" name="approve_new" [% IF column.group_has(perm, 'approve_new') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <input type="hidden" name="approve_existing" value="holder">
+                                    <input type="checkbox" name="approve_existing" [% IF column.group_has(perm, 'approve_existing') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <a class="btn btn-primary btn-sm cloneme"><i class="fa fa-lg fa-plus" style="cursor: pointer"></i></a>
+                                    <a class="btn btn-primary btn-sm removeme"><i class="fa fa-lg fa-minus" style="cursor: pointer"></i></a>
+                                </td>
+                            </tr>
+                        [% END %]
+                    </tbody>
+                </table>
+            [% ELSE %]
+                <p>No groups have been created yet. <a href="/group">Click here</a> to create a group.</p>
+            [% END %]
+        [% END %]
 [% ELSE %]
 <h2>Manage fields in [% instance_name | html %]</h2>
 
