Clarify approval column headings

--- a/views/layout.tt
+++ b/views/layout.tt
@@ -610,8 +610,8 @@
                     <thead>
                         <tr>
                             <th>Group</th>
-                            <th>Write new without approval</th>
-                            <th>Edit existing without approval</th>
+                            <th>Write new values without approval</th>
+                            <th>Edit existing values without approval</th>
                             <th>Approve new values</th>
                             <th>Approve edits</th>
                             <th></th>
